--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "cloudinary-vue": "^1.2.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
