--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "report": "vue-cli-service build --report"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
-    "cloudinary-vue": "^1.2.3",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -32,7 +33,8 @@
     "prettier": "^2.2.1",
     "sass": "^1.43.4",
     "sass-loader": "^10",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
