--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
+    "import": "^0.0.6",
+    "vee-validate": "^2.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
