--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^2.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
